--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -50,6 +50,12 @@
             android:summary="@string/qs_datausage_subtitle"
             android:defaultValue="false" />
 
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="notification_headers"
+            android:title="@string/notification_headers_title"
+            android:summary="@string/notification_headers_summary"
+            android:defaultValue="false" />
+
     <PreferenceCategory
         android:key="qs_footer"
         android:title="@string/qs_footer_title" >
