--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -103,11 +103,14 @@
         android:key="qs_theme_category"
         android:title="@string/qs_theme_category">
 
-        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+        <com.dirtyunicorns.support.preferences.SystemSettingListPreference
             android:key="qs_panel_bg_use_new_tint"
             android:title="@string/qs_bg_use_new_tint"
-            android:summary="@string/qs_bg_use_new_tint_summary"
-            android:defaultValue="false" />
+            android:dialogTitle="@string/qs_bg_use_new_tint"
+            android:entries="@array/qs_tint_entries"
+            android:entryValues="@array/qs_tint_values"
+            android:summary="%s"
+            android:defaultValue="0" />
 
         <com.dirtyunicorns.support.preferences.SystemSettingMasterSwitchPreference
             android:key="status_bar_custom_header"
