--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -33,59 +33,71 @@
     <color name="ambient_light_body_color">#323232</color>
 	
     <!--DT Icon backgorunds-->
-    <color name="dt_notifications_color">#3f00ACC1</color>
-    <color name="dt_miscellaneous_color">#3f9C27B0</color>
-		
-    <color name="dt_lockscreen_items_color">#3fD81B60</color>
-    <color name="dt_fingerprint_prefs_color">#3f00ACC1</color>
-		
-    <color name="dt_buttons_color">#3fD81B60</color>
-    <color name="dt_navigationbar_color">#3f9C27B0</color>
-    <color name="dt_powermenu_color">#3f00ACC1</color>	
-	
-    <color name="dt_battery_options_color">#3f00ACC1</color>	
-    <color name="dt_carrier_label_color">#3f7CB342</color>
-    <color name="dt_clock_options_color">#3fF4511E</color>
-    <color name="dt_corvus_parts_color">#3f1E88E5</color>	
-    <color name="dt_icon_manager_color">#3f9C27B0</color>	
-    <color name="dt_quicksettings_color">#3FD81B60</color>
-    <color name="dt_ticker_color">#3f00ACC1</color>
-    <color name="dt_traffic_color">#3f1E88E5</color>	
-	
+    <color name="dt_notifications_color">@color/red_bg_light</color>
+    <color name="dt_miscellaneous_color">@color/blue_bg_light</color>
+
+    <color name="dt_lockscreen_items_color">@color/green_bg_light</color>
+    <color name="dt_fingerprint_prefs_color">@color/orange_bg_light</color>
+
+    <color name="dt_buttons_color">@color/purple_bg_light</color>
+    <color name="dt_navigationbar_color">@color/cyan_bg_light</color>
+    <color name="dt_powermenu_color">@color/amber_bg_light</color>
+
+    <color name="dt_battery_options_color">@color/red_bg_light</color>
+    <color name="dt_carrier_label_color">@color/blue_bg_light</color>
+    <color name="dt_clock_options_color">@color/green_bg_light</color>
+    <color name="dt_corvus_parts_color">@color/orange_bg_light</color>
+    <color name="dt_icon_manager_color">@color/purple_bg_light</color>
+    <color name="dt_quicksettings_color">@color/cyan_bg_light</color>
+    <color name="dt_ticker_color">@color/amber_bg_light</color>
+    <color name="dt_traffic_color">@color/pink_bg_light</color>
+
     <!--DT Icon foreground tint-->
-    <color name="dt_notifications_icon_tint">#00ACC1</color>
-    <color name="dt_miscellaneous_icon_tint">#9C27B0</color>
-		
-    <color name="dt_lockscreen_items_icon_tint">#D81B60</color>
-    <color name="dt_fingerprint_prefs_icon_tint">#00ACC1</color>
-		
-    <color name="dt_buttons_icon_tint">#D81B60</color>
-    <color name="dt_navigationbar_icon_tint">#9C27B0</color>
-    <color name="dt_powermenu_icon_tint">#00ACC1</color>	
-	
-    <color name="dt_battery_options_icon_tint">#00ACC1</color>	
-    <color name="dt_carrier_label_icon_tint">#7CB342</color>
-    <color name="dt_clock_options_icon_tint">#F4511E</color>
-    <color name="dt_corvus_parts_icon_tint">#1E88E5</color>	
-    <color name="dt_icon_manager_icon_tint">#9C27B0</color>	
-    <color name="dt_quicksettings_icon_tint">#D81B60</color>
-    <color name="dt_ticker_icon_tint">#00ACC1</color>
-    <color name="dt_traffic_icon_tint">#1E88E5</color>
+    <color name="dt_notifications_icon_tint">@color/red_active</color>
+    <color name="dt_miscellaneous_icon_tint">@color/blue_active</color>
 
-    <color name="red_bg_light">#ffebee</color>
-    <color name="blue_bg_light">#e3f2fd</color>
-    <color name="green_bg_light">#e8f5e9</color>
-    <color name="orange_bg_light">#fff3e0</color>
+    <color name="dt_lockscreen_items_icon_tint">@color/green_active</color>
+    <color name="dt_fingerprint_prefs_icon_tint">@color/orange_active</color>
 
-    <color name="red_active">#f44336</color>
-    <color name="blue_active">#03a9f4</color>
-    <color name="green_active">#4caf50</color>
-    <color name="orange_active">#ff9800</color>
+    <color name="dt_buttons_icon_tint">@color/purple_active</color>
+    <color name="dt_navigationbar_icon_tint">@color/cyan_active</color>
+    <color name="dt_powermenu_icon_tint">@color/amber_active</color>
 
-    <color name="red_inactive">#e57373</color>
-    <color name="blue_inactive">#64b5f6</color>
-    <color name="green_inactive">#81c784</color>
-    <color name="orange_inactive">#ffb74d</color>
+    <color name="dt_battery_options_icon_tint">@color/red_active</color>
+    <color name="dt_carrier_label_icon_tint">@color/blue_active</color>
+    <color name="dt_clock_options_icon_tint">@color/green_active</color>
+    <color name="dt_corvus_parts_icon_tint">@color/orange_active</color>
+    <color name="dt_icon_manager_icon_tint">@color/purple_active</color>
+    <color name="dt_quicksettings_icon_tint">@color/cyan_active</color>
+    <color name="dt_ticker_icon_tint">@color/amber_active</color>
+    <color name="dt_traffic_icon_tint">@color/pink_active</color>
+
+    <color name="red_bg_light">#3dcf605a</color>
+    <color name="blue_bg_light">#3d2598b9</color>
+    <color name="green_bg_light">#3d65c59a</color>
+    <color name="orange_bg_light">#3df66934</color>
+    <color name="purple_bg_light">#3dA547BB</color>
+    <color name="cyan_bg_light">#3d1EBDCD</color>
+    <color name="amber_bg_light">#3dFFBF12</color>
+    <color name="pink_bg_light">#3dF6727F</color>
+
+    <color name="red_active">#C9514D</color>
+    <color name="blue_active">#007EA7</color>
+    <color name="green_active">#52B788</color>
+    <color name="orange_active">#F4511E</color>
+    <color name="purple_active">#8E24AA</color>
+    <color name="cyan_active">#00acc1</color>
+    <color name="amber_active">#ffb300</color>
+    <color name="pink_active">#F45B69</color>
+
+    <color name="red_inactive">#cf605a</color>
+    <color name="blue_inactive">#2598b9</color>
+    <color name="green_inactive">#65c59a</color>
+    <color name="orange_inactive">#f66934</color>
+    <color name="purple_inactive">#A547BB</color>
+    <color name="cyan_inactive">#1EBDCD</color>
+    <color name="amber_inactive">#FFBF12</color>
+    <color name="pink_inactive">#F6727F</color>
 
     <color name="default_inactive_shape_color">#e5e5e5</color>
     <color name="default_inactive_color">#212121</color>
