--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1033,4 +1033,16 @@
 
     <string-array name="fod_recog_animation_values" translatable="false">
     </string-array>
+
+    <!-- QS Header data uasge -->
+    <string-array name="qs_datausage_entries" translatable="false">
+        <item>@string/qs_datausage_disabled</item>
+        <item>@string/qs_datausage_daily</item>
+        <item>@string/qs_datausage_monthly</item>
+    </string-array>
+    <string-array name="qs_datausage_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
 </resources>
