Lair: enable by default for bt show statusbar

--- a/res/xml/icon_manager.xml
+++ b/res/xml/icon_manager.xml
@@ -49,5 +49,5 @@
          android:key="bluetooth_show_battery"
          android:title="@string/bluetooth_battery_title"
          android:summary="@string/bluetooth_battery_summary"
-         android:defaultValue="false"/>
+         android:defaultValue="true"/>
 </PreferenceScreen>
