--- a/res/layout/category_preference.xml
+++ b/res/layout/category_preference.xml
@@ -14,21 +14,21 @@
      limitations under the License.
 -->
 
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/prefCard"
     android:layout_width="match_parent"
     android:layout_height="74dp"
-    android:clickable="true"
-    android:focusable="true"
-    card_view:cardCornerRadius="@dimen/card_corner_radius"
-    card_view:cardElevation="0.0dp"
     android:layout_marginTop="@dimen/card_margin_top"
     android:layout_marginBottom="@dimen/card_margin_bottom"
     android:layout_marginRight="@dimen/card_margin_right"
     android:layout_marginLeft="@dimen/card_margin_left"
-    card_view:cardBackgroundColor="@android:color/transparent"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    card_view:cardCornerRadius="@dimen/card_corner_radius"
+    card_view:cardElevation="0.0dp"
+    card_view:cardBackgroundColor="@android:color/transparent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -63,17 +63,12 @@
                 android:textSize="18sp"
                 android:textColor="@*android:color/accent_device_default_light"/>
 
-
             <TextView
                 android:id="@android:id/summary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="2dp"
-                android:singleLine="true"
-                android:ellipsize="marquee"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:scrollHorizontally="true"
                 android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
