--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -628,13 +628,15 @@
         <item>@string/qs_brightness_slider_hide</item>
         <item>@string/qs_brightness_slider_top</item>
         <item>@string/qs_brightness_slider_bottom</item>
-        <item>@string/qs_brightness_slider_show_expanded</item>
+        <item>@string/qs_brightness_slider_always_top</item>
+        <item>@string/qs_brightness_slider_always_bottom</item>
     </string-array>
     <string-array name="qs_brightness_slider_values" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
     </string-array>
 
     <string-array name="lockscreen_cover_filter_entries">
