--- a/res/xml/buttons.xml
+++ b/res/xml/buttons.xml
@@ -33,6 +33,13 @@
     <PreferenceCategory
 	android:title="@string/volume_stuff_title">
 
+    <com.dirtyunicorns.support.preferences.SystemSettingListPreference
+        android:key="systemui_plugin_volume"
+        android:title="@string/volume_panel"
+        android:entries="@array/volume_panel_entries"
+        android:entryValues="@array/volume_panel_values"
+        android:defaultValue="@string/volume_panel_aosp_val" />
+
     <Preference
         android:key="vol_steps"
         android:title="@string/volume_steps_title"
