Nad: Add a switch for notification counters [2/2]
Change-Id: Id31ff3aea1b3f3726bde5ff2ef6b168eb27e4576

--- a/res/xml/icon_manager.xml
+++ b/res/xml/icon_manager.xml
@@ -26,6 +26,12 @@
                 android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
         </Preference>
 
+    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+        android:key="status_bar_notif_count"
+        android:title="@string/notif_count_title"
+        android:summary="@string/notif_count_summary"
+        android:defaultValue="false" />
+
     <Preference
         android:key="signal_icon_switch"
         android:title="@string/signal_icon_switch_title"
