--- a/res/values/bools.xml
+++ b/res/values/bools.xml
@@ -55,8 +55,8 @@
     <!-- Whether to display power menu category -->
     <bool name="has_powermenu">true</bool>
 
-    <!-- Whether to display corvus parts -->
-    <bool name="has_corvus_parts_available">false</bool>
+    <!-- Whether to display nusantara parts -->
+    <bool name="has_nusantara_parts_available">false</bool>
 
     <!-- FOD recognizing animation -->
     <bool name="has_fod_animation_picker">false</bool>
