--- a/res/xml/system.xml
+++ b/res/xml/system.xml
@@ -17,13 +17,13 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <com.dirtyunicorns.tweaks.preferences.CategoryPreference
-        android:key="corvus_parts_category"
-        android:icon="@drawable/dt_corvus_parts_bg"
-        android:title="@string/corvus_parts_title"
-        android:summary="@string/corvus_parts_summary" >
+        android:key="nusantara_parts_category"
+        android:icon="@drawable/dt_nusantara_parts_bg"
+        android:title="@string/nad_parts_title"
+        android:summary="@string/nad_parts_summary" >
         <intent android:action="com.android.settings.action.EXTRA_SETTINGS"
-            android:targetPackage="com.corvus.parts"
-            android:targetClass="com.corvus.parts.DeviceSettingsActivity" />
+            android:targetPackage="org.nusantara.project.parts"
+            android:targetClass="org.nusantara.project.parts.DeviceSettingsActivity" />
     </com.dirtyunicorns.tweaks.preferences.CategoryPreference>
 
     <com.dirtyunicorns.tweaks.preferences.CategoryPreference
