Rework layout * Use RelativeLayout for category preference * Use HSL hex for color * Use ImageView for background preference * Adjust some dimens * Update some logos
Change-Id: I3e9efbb8d83fd8d11f14bfb741ce2c1bf21247e8

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -18,12 +18,13 @@
 
     <!-- Cardview Preference -->
     <dimen name="card_elevation">0dp</dimen>
-    <dimen name="card_corner_radius">12dp</dimen>
+    <dimen name="card_corner_radius">8dp</dimen>
     <dimen name="card_margin_top">2dp</dimen>
-    <dimen name="card_margin_bottom">2dp</dimen>
-    <dimen name="card_margin_right">8dp</dimen>
-    <dimen name="card_margin_left">8dp</dimen>
+    <dimen name="card_margin_bottom">4dp</dimen>
+    <dimen name="card_margin_right">18dp</dimen>
+    <dimen name="card_margin_left">18dp</dimen>
 
+    <!-- Dashboard -->
     <dimen name="nad_dashboard_tile_image_size">48.0dip</dimen>
     <dimen name="nad_dashboard_tile_foreground_image_inset">6.0dip</dimen>
     <dimen name="nad_dashboard_tile_foreground_image_size">36.0dip</dimen>
@@ -42,10 +43,10 @@
     <dimen name="ambient_light_preview_paddingHorizontal">50dp</dimen>
     <dimen name="ambient_light_preview_paddingVertical">30dp</dimen>
 
-    <dimen name="default_corner_radii">56dp</dimen>
+    <dimen name="default_corner_radii">8dp</dimen>
     <dimen name="default_nav_item_padding">10dp</dimen>
     <dimen name="default_nav_item_text_size">11sp</dimen>
     <dimen name="default_nav_item_text_padding">8dp</dimen>
     <dimen name="default_nav_item_title_max_width">80dp</dimen>
-    <dimen name="default_icon_size">24dp</dimen>
+    <dimen name="default_icon_size">26dp</dimen>
 </resources>
