--- a/res/drawable/dt_navigationbar.xml
+++ b/res/drawable/dt_navigationbar.xml
@@ -4,9 +4,16 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-	android:tint="@color/dt_navigationbar_icon_tint">
+    android:tint="@color/dt_navigationbar_icon_tint">
 
     <path
-        android:fillColor="#000000"
-        android:pathData="M22.9,11.2l-7.2-4.6c-0.3-0.2-0.7-0.2-1,0c-0.3,0.2-0.5,0.5-0.5,0.9v3.4H9.8V7.4c0-0.4-0.2-0.7-0.5-0.9 c-0.3-0.2-0.7-0.2-1,0l-7.2,4.6c-0.3,0.2-0.5,0.5-0.5,0.8s0.2,0.7,0.5,0.8l7.2,4.6c0.2,0.1,0.4,0.2,0.5,0.2c0.2,0,0.3,0,0.5-0.1 c0.3-0.2,0.5-0.5,0.5-0.9v-3.8h4.4v3.8c0,0.4,0.2,0.7,0.5,0.9c0.1,0.1,0.3,0.1,0.5,0.1c0.2,0,0.4-0.1,0.5-0.2l7.2-4.6 c0.3-0.2,0.5-0.5,0.5-0.8S23.2,11.3,22.9,11.2z M7.8,14.8L3.5,12l4.3-2.8V14.8z M16.2,14.8V9.2l4.3,2.8L16.2,14.8z" />
+        android:fillAlpha="1.0"
+        android:strokeLineCap="butt"
+        android:strokeColor="#ff000000"
+        android:strokeMiterLimit="0.01"
+        android:strokeAlpha="0.0"
+        android:fillColor="#ffffffff"
+        android:strokeLineJoin="miter"
+        android:strokeWidth="0.03"
+        android:pathData="M14.35,4.29C14.2,4.31,14.05,4.33,13.91,4.39C13.39,4.59,13.05,5.06,12.98,5.61C12.96,5.78,12.98,5.97,12.98,6.14L12.98,7.17L12.98,10.31L12.98,12.49C12.98,12.86,12.93,13.28,13,13.65C13.14,14.41,13.87,14.9,14.62,14.83C14.94,14.79,15.21,14.62,15.48,14.47C15.87,14.25,16.26,14.02,16.64,13.8C18.09,12.96,19.54,12.12,20.99,11.29C21.32,11.1,21.71,10.93,22,10.68C22.32,10.4,22.49,10.01,22.51,9.59C22.53,9.17,22.32,8.72,22,8.45C21.73,8.22,21.39,8.07,21.09,7.89C19.54,6.97,17.96,6.1,16.4,5.19C16.08,5,15.76,4.81,15.44,4.63C15.1,4.44,14.75,4.24,14.35,4.29M9.39,9.75C8.96,9.81,8.64,10,8.27,10.22C7.94,10.41,7.6,10.61,7.26,10.8C5.87,11.6,4.48,12.41,3.09,13.21C2.86,13.34,2.63,13.47,2.4,13.61C2.23,13.7,2.05,13.8,1.9,13.93C1.63,14.17,1.45,14.51,1.42,14.87C1.37,15.34,1.55,15.82,1.91,16.13C2.14,16.34,2.44,16.48,2.71,16.63C4.32,17.54,5.91,18.48,7.5,19.39C7.78,19.55,8.05,19.7,8.32,19.86C8.77,20.13,9.18,20.36,9.72,20.28C10.3,20.19,10.78,19.73,10.91,19.17C10.97,18.89,10.94,18.58,10.94,18.3L10.94,13.47L10.94,11.88C10.94,11.62,10.97,11.34,10.94,11.08C10.85,10.35,10.18,9.65,9.39,9.75Z"/>
 </vector>
