--- a/res/layout/category_preference.xml
+++ b/res/layout/category_preference.xml
@@ -14,65 +14,64 @@
      limitations under the License.
 -->
 
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:layout_marginTop="@dimen/card_margin_top"
-    android:layout_marginBottom="@dimen/card_margin_bottom"
-    android:layout_marginRight="@dimen/card_margin_right"
-    android:layout_marginLeft="@dimen/card_margin_left"
-    android:clickable="true"
-    android:focusable="true"
-    card_view:cardCornerRadius="@dimen/card_corner_radius"
-    card_view:cardBackgroundColor="@*android:color/transparent"
-    card_view:cardElevation="@dimen/card_elevation">
 
-    <RelativeLayout
-        android:id="@+id/card_bg"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:gravity="center">
+
+    <ImageView
+        android:id="@+id/card"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
-        android:orientation="horizontal">
+        android:layout_height="74dp"
+        android:layout_marginLeft="18dp"
+        android:layout_marginRight="18dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="4dp"
+        android:scaleType="center"
+        android:tint="#80ffffff"
+        android:src="@drawable/card_bg"/>
 
         <LinearLayout
             android:id="@id/icon_frame"
-            android:layout_marginTop="4dp"
-            android:layout_centerHorizontal="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_width="74dp"
+            android:layout_height="74dp">
 
             <ImageView
                 android:id="@android:id/icon"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="center" />
+                android:scaleType="center"
+                android:layout_alignRight="@id/icon_frame"/>
         </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/icon_frame"
             android:gravity="center"
-            android:layout_centerHorizontal="true"
             android:orientation="vertical">
 
             <TextView
                 android:id="@android:id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:textStyle="bold"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="20dp"
                 android:textSize="18sp"/>
 
             <TextView
                 android:id="@android:id/summary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_marginBottom="4dp"
+                android:layout_marginStart="24dp"
                 android:textSize="12sp" />
-        </LinearLayout>
-    </RelativeLayout>
-</androidx.cardview.widget.CardView>
+    </LinearLayout>
+</RelativeLayout>
