--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -118,6 +118,15 @@
             android:summary="@sting/qs_panel_disco_summary"
             android:defaultValue="false" />
 
+        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+            android:key="qs_panel_disco_duration"
+            android:title="@string/qs_panel_disco_duration_title"
+            android:defaultValue="5"
+            android:max="5"
+            settings:min="1"
+            settings:units="sec" 
+            android:dependency="qs_panel_disco" />
+
         <com.dirtyunicorns.support.preferences.SystemSettingListPreference
             android:key="qs_label_use_new_tint"
             android:title="@string/qs_label_use_new_tint"
