--- a/res/xml/system.xml
+++ b/res/xml/system.xml
@@ -27,6 +27,13 @@
     </com.dirtyunicorns.tweaks.preferences.CategoryPreference>
 
     <com.dirtyunicorns.tweaks.preferences.CategoryPreference
+        android:key="themes_category"
+        android:icon="@drawable/dt_themes_bg"
+        android:title="@string/themes_title"
+        android:summary="@string/themes_summary"
+        android:fragment="com.dirtyunicorns.tweaks.fragments.system.Themes" />
+
+    <com.dirtyunicorns.tweaks.preferences.CategoryPreference
         android:key="notifications_category"
         android:icon="@drawable/dt_notifications_bg"
         android:title="@string/notifications_title"
