--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -18,6 +18,12 @@
             xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
             android:title="@string/miscellaneous_title" >
 
+    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+        android:key="nusantara_wings_style"
+        android:title="@string/nad_style_title"
+        android:summary="@string/nad_style_summary"
+        android:defaultValue="true" />
+
     <PreferenceScreen
         android:key="rounded_corners"
         android:title="@string/corners_title"
