--- a/res/values-land/dimens.xml
+++ b/res/values-land/dimens.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2020 The Dirty Unicorns Project
 
-<!-- Copyright (C) 2019 The Dirty Unicorns Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
+
           http://www.apache.org/licenses/LICENSE-2.0
 
      Unless required by applicable law or agreed to in writing, software
@@ -13,9 +14,9 @@
      limitations under the License.
 -->
 
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <color name="themes_reset_menu_item">#FFFFFFFF</color>
-    <color name="fod_item_background_stroke_color">#555555</color>
+    <!-- The Team -->
+    <dimen name="team_recycler_height">250dp</dimen>
 
 </resources>
