--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -17,6 +17,7 @@
 <resources>
 
     <!-- Dirty Tweaks -->
+    <color name="team_dialog_circle_border_color">@*android:color/accent_device_default_light</color>
     <color name="dirty_tweaks_category_icon_tint">@*android:color/accent_device_default_light</color>
     <color name="homepage_du_background">#D32F2F</color>
     <color name="cardview_bg">#0FFFFFFF</color>
