--- a/res/xml/traffic_indicators.xml
+++ b/res/xml/traffic_indicators.xml
@@ -33,6 +33,14 @@
         android:summary="%s"
         android:defaultValue="0" />
 
+    <com.dirtyunicorns.support.preferences.SystemSettingListPreference
+        android:key="network_traffic_font_style"
+        android:title="@string/net_traffic_font"
+        android:entries="@array/lock_clock_fonts_entries"
+        android:entryValues="@array/lock_clock_fonts_values"
+        android:summary="%s"
+        android:defaultValue="0" />
+
     <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
         android:key="network_traffic_autohide_threshold"
         android:title="@string/network_traffic_autohide_threshold_title"
