--- a/res/xml/themes.xml
+++ b/res/xml/themes.xml
@@ -16,6 +16,14 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/themes_title" >
 
+    <com.dirtyunicorns.support.preferences.SystemSettingListPreference
+        android:key="nusantara_wings_style"
+        android:title="@string/nad_style_title"
+        android:entries="@array/nad_style_color_entries"
+        android:entryValues="@array/nad_style_color_values"
+        android:summary="%s"
+        android:defaultValue="0" />
+
     <ListPreference
         android:key="theme_navbar_picker"
         android:title="@string/theme_navbar_picker_title"
