--- a/res/xml/lockscreen_style.xml
+++ b/res/xml/lockscreen_style.xml
@@ -26,6 +26,14 @@
             android:entryValues="@array/lockscreen_clock_values"
             android:defaultValue="2" />
 
+        <com.dirtyunicorns.support.preferences.SecureSettingSeekBarPreference
+            android:key="lockscreen_item_padding"
+            android:title="@string/lockscreen_item_padding_title"
+            android:max="65"
+            settings:min="0"
+            settings:units="dp"
+            android:defaultValue="35" />
+
         <ListPreference
             android:key="lock_clock_fonts"
             android:title="@string/lock_clock_font_title"
@@ -74,6 +82,15 @@
             settings:units="dp"
             android:defaultValue="18"
             android:persistent="false" />
+
+        <com.dirtyunicorns.support.preferences.SecureSettingListPreference
+            android:key="lock_date_alignment"
+            android:title="@string/lockscreen_date_alignment_title"
+            android:dialogTitle="@string/lockscreen_date_alignment_title"
+            android:entries="@array/lockscreen_item_alignment_entries"
+            android:entryValues="@array/lockscreen_item_alignment_values"
+            android:summary="%s"
+            android:defaultValue="1" />
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -97,6 +114,15 @@
             settings:units="sp"
             android:defaultValue="18"
             android:persistent="false" />
+
+        <com.dirtyunicorns.support.preferences.SecureSettingListPreference
+            android:key="lock_ownerinfo_alignment"
+            android:title="@string/lockscreen_ownerinfo_alignment_title"
+            android:dialogTitle="@string/lockscreen_ownerinfo_alignment_title"
+            android:entries="@array/lockscreen_item_alignment_entries"
+            android:entryValues="@array/lockscreen_item_alignment_values"
+            android:summary="%s"
+            android:defaultValue="1" />
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -121,12 +147,22 @@
             android:persistent="false"
             android:defaultValue="40" />
 
-        <com.dirtyunicorns.support.preferences.SystemSettingListPreference
+        <com.dirtyunicorns.support.preferences.SecureSettingListPreference
             android:key="text_clock_alignment"
-            android:title="@string/text_clock_alignment"
-            android:dialogTitle="@string/text_clock_alignment"
-            android:entries="@array/text_clock_entries"
-            android:entryValues="@array/text_clock_values"
-            android:defaultValue="0" />
+            android:title="@string/center_text_clock_title"
+            android:dialogTitle="@string/center_text_clock_title"
+            android:entries="@array/lockscreen_item_alignment_entries"
+            android:entryValues="@array/lockscreen_item_alignment_values"
+            android:summary="%s"
+            android:defaultValue="1" />
+
+        <com.dirtyunicorns.support.preferences.SecureSettingSeekBarPreference
+            android:key="lockscreen_item_padding"
+            android:title="@string/lockscreen_item_padding_title"
+            android:max="65"
+            android:defaultValue="35"
+            settings:min="0"
+            settings:units="dp"
+            settings:interval="1" />
     </PreferenceCategory>
 </PreferenceScreen>
