Remove default value in volume left
Change-Id: I62d10bb5e610761586f92195622624371350f0d1

--- a/res/xml/buttons.xml
+++ b/res/xml/buttons.xml
@@ -57,8 +57,7 @@
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
         android:key="audio_panel_view_position"
         android:title="@string/volume_panel_on_left_title"
-        android:summary="@string/volume_panel_on_left_summary"
-        android:defaultValue="false" />
+        android:summary="@string/volume_panel_on_left_summary"/>
 
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
         android:key="volume_button_music_control"
