Nad: Add OOS Compact VoLTE & VoWifi icon [2/2]
Change-Id: I9f62997ffe9ba3f74bb6c6d9a924a1125226f489
Co-authored-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: Ayush Dubey <ayushdubey70@gmail.com>
Signed-off-by: PainKiller3 <ninadpatil100@gmail.com>
Signed-off-by: Ray <vincentrayananda@gmail.com>
Signed-off-by: ghou8s <ghou8s@gmail.com>

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -556,6 +556,7 @@
 
     <!-- VoLTE Icon Type -->
     <string-array name="volte_icon_type_entries" translatable="false">
+        <item>@string/volte_icon_oos_compact</item>
         <item>@string/volte_icon_miui</item>
         <item>@string/volte_icon_hd</item>
         <item>@string/volte_icon_oos</item>
@@ -564,6 +565,7 @@
     </string-array>
 
     <string-array name="volte_icon_type_values" translatable="false">
+        <item>5</item>
         <item>4</item>
         <item>3</item>
         <item>2</item>
@@ -591,6 +593,7 @@
         <item>@string/vowifi_icon_moto</item>
         <item>@string/vowifi_icon_asus</item>
         <item>@string/vowifi_icon_emui</item>
+        <item>@string/vowifi_icon_oos_compact</item>
     </string-array>
 
     <string-array name="vowifi_icon_style_values" translatable="false">
@@ -599,6 +602,7 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
+        <item>5</item>
     </string-array>
 
     <!-- QS Brightness Slider position -->
