--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -63,6 +63,13 @@
             android:summary="@string/notification_headers_summary"
             android:defaultValue="false" />
 
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="center_notification_headers"
+            android:title="@string/center_notification_headers_title"
+            android:summary="@string/center_notification_headers_summary"
+            android:dependency="notification_headers"
+            android:defaultValue="false" />
+
     <PreferenceCategory
         android:key="qs_footer"
         android:title="@string/qs_footer_title" >
