Fix transparent BG color
Change-Id: I1e0ea4bc1b0f224d9871264b85f8f3917d0c11a9

--- a/res/layout/category_preference.xml
+++ b/res/layout/category_preference.xml
@@ -31,9 +31,7 @@
         android:layout_marginRight="18dp"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="4dp"
-        android:scaleType="center"
-        android:tint="#80ffffff"
-        android:src="@drawable/card_bg"/>
+        android:scaleType="center"/>
 
         <LinearLayout
             android:id="@id/icon_frame"
