--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1285,6 +1285,7 @@
         <item>@string/theme_type_baked_green</item>
         <item>@string/theme_type_dark_grey</item>
         <item>@string/theme_type_material_ocean</item>
+        <item>@string/theme_type_nad_clear</item>
     </string-array>
 
     <string-array name="theme_type_values">
@@ -1296,6 +1297,7 @@
         <item>6</item>
         <item>7</item>
         <item>8</item>
+        <item>9</item>
     </string-array>
 
     <!-- Navbar name -->
