Revert back aospa volume dialog
Revert "Remove default value in volume left"

This reverts commit 8f224fdc131a87ca40f210810a17eab5ea4e7a18.

Revert "Rewrite volume left options code"

This reverts commit 3444f6aa54af70872675593751c700538a0ccbb4.

Revert "POSP Vol panel styles"

This reverts commit 06c9db3f585b9a3f7528c7805d179b75d2a9279d.

Change-Id: I1701cd9301916460319bddd4b102210828aee493

--- a/res/xml/buttons.xml
+++ b/res/xml/buttons.xml
@@ -33,13 +33,6 @@
     <PreferenceCategory
 	android:title="@string/volume_stuff_title">
 
-    <com.dirtyunicorns.support.preferences.SystemSettingListPreference
-        android:key="systemui_plugin_volume"
-        android:title="@string/volume_panel"
-        android:entries="@array/volume_panel_entries"
-        android:entryValues="@array/volume_panel_values"
-        android:defaultValue="@string/volume_panel_aosp_val" />
-
     <Preference
         android:key="vol_steps"
         android:title="@string/volume_steps_title"
@@ -57,7 +50,8 @@
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
         android:key="audio_panel_view_position"
         android:title="@string/volume_panel_on_left_title"
-        android:summary="@string/volume_panel_on_left_summary"/>
+        android:summary="@string/volume_panel_on_left_summary"
+        android:defaultValue="false" />
 
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
         android:key="volume_button_music_control"
