--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -36,7 +36,7 @@
             android:key="qs_datausage_location"
             android:title="@string/qs_data_usage_location_title"
             android:summary="@string/qs_data_usage_location_summary"
-            android:defaultValue="true"/>
+            android:defaultValue="false"/>
 
         <com.dirtyunicorns.support.preferences.SystemSettingListPreference
             android:key="qs_datausage"
