--- a/res/xml/buttons.xml
+++ b/res/xml/buttons.xml
@@ -57,7 +57,7 @@
         android:key="music_volume_panel_dialog"
         android:title="@string/volume_panel_musiccard_title"
         android:summary="@string/volume_panel_musiccard_summary"
-        android:defaultValue="true" />
+        android:defaultValue="false" />
 
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
         android:key="volume_button_music_control"
